@@ -1,12 +1,10 @@
 [buildout]
-extends = versions/versions.cfg
-parts =
-    test
-    tags
-    batou
+parts = batou tags
 develop = .
-allow-picked-versions = false
 index = http://f.pypi.python.org/simple
+allow-picked-versions = false
+show-picked-versions = true
+versions = versions
 
 [tags]
 recipe = z3c.recipe.tag:tags
@@ -18,10 +16,38 @@ eggs = batou
        flake8
        sphinx
 interpreter = py
-entry-points =
-    flake8=flake8.run:main
+dependent-scripts = true
 
-[test]
-recipe = zc.recipe.testrunner
-eggs = batou [test]
-defaults = ['--auto-color']
+[versions]
+Jinja2 = 2.7
+Mako = 0.6.2
+MarkupSafe = 0.15
+Pygments = 1.6
+SimpleAES = 0.2
+Sphinx = ${versions:sphinx}
+Sphinx-PyPI-upload = 0.2.1
+buildout-versions = 1.7
+configobj = 4.7.2
+cov-core = 1.7
+coverage = 3.6
+distribute = 0.6.45
+docutils = 0.10
+flake8 = 1.3.1
+gocept.package = 1.0
+mock = 1.0.1
+paramiko = 1.8.0
+pep8 = 1.4.5
+pkginfo = 0.8
+py = 1.4.14
+pycrypto = 2.6
+pyflakes = 0.5.0
+pytest = 2.3.5
+pytest-capturelog = 0.7
+pytest-codecheckers = 0.2
+pytest-cov = 1.6
+setuptools = 0.7.4
+sphinx = 1.1.2
+z3c.recipe.tag = 0.7
+zc.buildout = 2.1.0
+zc.recipe.egg = 2.0.0
+zope.cachedescriptors = 4.0.0
