@@ -1,29 +1,0 @@
-[buildout]
-extends = ztk-versions-1.1.4.cfg
-versions = versions
-
-[versions]
-# Batou
-Mako = 0.6.2
-MarkupSafe = 0.15
-SimpleAES = 0.2
-Sphinx = ${versions:sphinx}
-mock = 1.0.1
-pkginfo = 0.8
-pycrypto = 2.6
-sphinx = 1.1.2
-configobj = 4.7.2
-paramiko = 1.8.0
-# Development / buildout
-z3c.recipe.tag = 0.4.1
-Sphinx-PyPI-upload = 0.2.1
-pyflakes = 0.5.0
-buildout-versions = 1.7
-gocept.package = 1.0
-flake8 = 1.3.1
-pytest = 2.3.5
-pytest-capturelog = 0.7
-pytest-codecheckers = 0.2
-pytest-cov = 1.6
-cov-core = 1.7
-pep8 = 1.4.5
